kubernetes/mongo_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-db
  namespace: dev
spec:
  clusterIP: none
  selector:
    app: mongo-db
  ports:
    - port: 27017
      targetPort: 27017
