kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    #alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80, "HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:765151564855:certificate/a4009651-bb41-4ccf-93d2-7b67ded42628
    alb.ingress.kubernetes.io/target-type: ip

spec:
  rules:
  - host: www.kaushikops.com

    http:
      paths:

        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 80

        - path: /api
          pathType: Prefix
          backend:
            service: 
              name: backend
              port:
                number: 5000

        - path: /uploads
          pathType: Prefix
          backend:
            service:
              name: backend
              port:
                number: 5000
